# mcp-server-kagi-search

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/kagimcp/: server.py
src/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/openapi_client/api/: __init__.py  enrichment_api.py  extract_api.py  fast_gpt_api.py  search_api.py  summarizer_api.py  translate_api.py
src/openapi_client/models/: __init__.py  enrich_search200_response.py  error_detail.py  error_envelope.py  extract_request.py  extract_response.py  fast_gpt200_response.py  fast_gpt200_response_data.py  fast_gpt_request.py  meta.py  page_input.py  page_output.py  search200_response.py  search200_response_data.py  search_object.py  search_object_image.py  search_object_thumbnail.py  search_request.py  search_request_extract.py  search_request_filters.py  search_request_lens.py  search_request_personalizations.py  search_request_personalizations_domains_inner.py  search_request_personalizations_regexes_inner.py  search_result.py  search_result_image.py  summary.py  summary_data.py  translate200_response.py  translate200_response_one_of.py  translate200_response_one_of1.py  translate200_response_one_of_definition.py  translate200_response_one_of_definition_definitions_inner.py  translate200_response_one_of_definition_definitions_inner_meanings_inner.py  translate200_response_one_of_detected_language.py  translate400_response.py  translate500_response.py  translate_alternatives200_response.py  translate_alternatives200_response_elements_inner.py  translate_alternatives401_response.py  (+23 more)
