[project]
name = "kagimcp"
version = "0.1.5"
authors = [
    {name="Rehan Ali Rana", email="rehan@kagi.com"},
]
description = "Kagi MCP server"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "kagiapi~=0.2.1",
    "mcp[cli]~=1.26.0",
    "pydantic~=2.12.5",
]

[project.urls]
Homepage = "https://github.com/kagisearch/kagi-mcp"
Issues = "https://github.com/kagisearch/kagi-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kagimcp = "kagimcp:main"
