[project]
name = "kagimcp"
version = "0.1.5"
authors = [
    {name="Rehan Ali Rana", email="rehan@kagi.com"},
]
description = "Kagi MCP server"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "openapi_client @ git+https://github.com/kagisearch/kagi-api-python.git",
    "fastmcp~=3.2",
    "pydantic~=2.12.5",
    "httpx~=0.28",
]

[project.urls]
Homepage = "https://github.com/kagisearch/kagi-mcp"
Issues = "https://github.com/kagisearch/kagi-mcp/issues"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kagimcp = "kagimcp:main"
